RESOLVED FIXED97454
[Chromium] Page popup doesn't change mouse cursor
https://bugs.webkit.org/show_bug.cgi?id=97454
Summary [Chromium] Page popup doesn't change mouse cursor
Keishi Hattori
Reported 2012-09-24 07:43:37 PDT
Right now page popup doesn't set cursor.
Attachments
Patch (1.57 KB, patch)
2012-09-24 07:48 PDT, Keishi Hattori
no flags
Patch (2.88 KB, patch)
2012-11-30 02:57 PST, Keishi Hattori
no flags
Keishi Hattori
Comment 1 2012-09-24 07:48:45 PDT
Kent Tamura
Comment 2 2012-09-24 18:44:36 PDT
Comment on attachment 165381 [details] Patch Does the cursor return to the correct appearance when the popup is closed?
Keishi Hattori
Comment 3 2012-10-03 08:17:52 PDT
(In reply to comment #2) > (From update of attachment 165381 [details]) > Does the cursor return to the correct appearance when the popup is closed? So far I've only tested Win and Mac. Win works perfectly without this patch. Cursor is updated when closing. On mac: Using esc key to close: cursor will be hidden. Select date to close: cursor will not be updated. Select popup works the same way so maybe this is the expected behavior. I should test Cocoa.
Keishi Hattori
Comment 4 2012-10-03 18:51:50 PDT
(In reply to comment #3) > (In reply to comment #2) > > (From update of attachment 165381 [details] [details]) > > Does the cursor return to the correct appearance when the popup is closed? > > So far I've only tested Win and Mac. > > Win works perfectly without this patch. Cursor is updated when closing. > > On mac: > Using esc key to close: cursor will be hidden. > Select date to close: cursor will not be updated. > Select popup works the same way so maybe this is the expected behavior. I should test Cocoa. On Linux it works perfectly like Windows. On windows and linux mousemove events do not fire on the main web view, but fires when the popup closes. On mac the mousemoves reach both the page popup and main web view, resulting in bit of flickering when moving the mouse fast. Cocoa updates the mouse cursor when closing a popup menu.
Keishi Hattori
Comment 5 2012-11-30 02:57:27 PST
Keishi Hattori
Comment 6 2012-11-30 02:59:31 PST
I think the ideal solution would be to change the native view for PagePopupWidget to a NSWindow or a custom NSView subclassed to override event propagation.
Kent Tamura
Comment 7 2012-11-30 03:03:48 PST
Comment on attachment 176932 [details] Patch looks ok
WebKit Review Bot
Comment 8 2012-11-30 03:22:16 PST
Comment on attachment 176932 [details] Patch Clearing flags on attachment: 176932 Committed r136222: <http://trac.webkit.org/changeset/136222>
WebKit Review Bot
Comment 9 2012-11-30 03:22:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.